Update LCM driver to hlt_boe40 variant
Replaces previous jd9161_wvga_dsi_vdo_dj implementation with hlt_boe40 configuration
Adjusts display parameters and initialization sequences for new panel requirements
Removes obsolete driver files while maintaining compatible DSI interface settings

--- a/arch/arm/configs/wt6580_we_n_defconfig
+++ b/arch/arm/configs/wt6580_we_n_defconfig
@@ -1364,7 +1364,7 @@ CONFIG_MTK_SYNC=y
 CONFIG_MTK_VIDEOCODEC_DRIVER=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
-CONFIG_CUSTOM_KERNEL_LCM="jd9161_wvga_dsi_vdo_dj"
+CONFIG_CUSTOM_KERNEL_LCM="jd9161_wvga_dsi_vdo_hlt_boe40"
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_CUSTOM_LCM_X="0"
 CONFIG_CUSTOM_LCM_Y="0"
