--- a/arch/arm/configs/wt6580_we_n_defconfig
+++ b/arch/arm/configs/wt6580_we_n_defconfig
@@ -1284,7 +1284,6 @@ CONFIG_MTK_PMIC_WRAP=y
 CONFIG_MTK_PMIC=y
 # CONFIG_MTK_CHARGER_INTERFACE is not set
 # CONFIG_MTK_RT9466_SUPPORT is not set
-CONFIG_MTK_BQ24296_SUPPORT=y
 # CONFIG_MTK_BQ25896_SUPPORT is not set
 # CONFIG_MTK_BQ25898_DUAL_SUPPORT is not set
 CONFIG_MTK_SWITCH_INPUT_OUTPUT_CURRENT_SUPPORT=y
@@ -1298,6 +1297,7 @@ CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 #
 # MultiMedia, Display, Camera related configs
 #
+CONFIG_CUSTOM_KERNEL_IMGSENSOR=""
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV=""
 # CONFIG_MTK_LCM_PHYSICAL_ROTATION_HW is not set
 # CONFIG_MTK_CAM_CAL is not set
@@ -1325,6 +1325,7 @@ CONFIG_MTK_CAM_MAX_NUMBER_OF_CAMERA=2
 # CONFIG_MTK_EFUSE_DOWNGRADE is not set
 # CONFIG_MTK_JPEG is not set
 CONFIG_MTK_LCM=y
+CONFIG_CUSTOM_KERNEL_LCM="jd9161_wvga_dsi_vdo_hlt_boe40"
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_LENS=y
 # CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
@@ -1364,8 +1365,9 @@ CONFIG_MTK_SYNC=y
 CONFIG_MTK_VIDEOCODEC_DRIVER=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
-CONFIG_CUSTOM_KERNEL_LCM="jd9161_wvga_dsi_vdo_hlt_boe40"
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
+CONFIG_LCM_HEIGHT="1920"
+CONFIG_LCM_WIDTH="1080"
 CONFIG_CUSTOM_LCM_X="0"
 CONFIG_CUSTOM_LCM_Y="0"
 CONFIG_MTK_FB_SUPPORT_ASSERTION_LAYER=y
@@ -1382,6 +1384,7 @@ CONFIG_MTK_PQ_COLOR_MODE="DISP"
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSORS_1_0=y
 # CONFIG_MTK_AUTO_DETECT_ACCELEROMETER is not set
+# CONFIG_CUSTOM_KERNEL_ACCELEROMETER is not set
 # CONFIG_MTK_ACCELHUB is not set
 # CONFIG_MTK_BMI160_SPI is not set
 # CONFIG_MTK_MC3410_I2C is not set
@@ -1389,6 +1392,7 @@ CONFIG_MTK_SENSORS_1_0=y
 # CONFIG_MTK_BMA222E is not set
 # CONFIG_MTK_MPU6050G is not set
 # CONFIG_MTK_STK8BAXX is not set
+# CONFIG_CUSTOM_KERNEL_ALSPS is not set
 # CONFIG_MTK_AUTO_DETECT_ALSPS is not set
 # CONFIG_MTK_CM36558 is not set
 # CONFIG_MTK_ALSPSHUB is not set
@@ -1398,13 +1402,15 @@ CONFIG_MTK_SENSORS_1_0=y
 # CONFIG_MTK_APDS9930 is not set
 # CONFIG_MTK_LTR559 is not set
 # CONFIG_MTK_STK3X1X_OT is not set
+# CONFIG_MTK_EPL259X_NEW is not set
+# CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
 # CONFIG_MTK_GYROHUB is not set
 # CONFIG_MTK_BMI160GY_SPI is not set
 # CONFIG_MTK_ITG1010 is not set
 # CONFIG_MTK_MPU6515G is not set
 # CONFIG_MTK_MPU6050GY is not set
-CONFIG_MTK_MPU6500GY=y
 # CONFIG_MTK_AUTO_DETECT_MAGNETOMETER is not set
+# CONFIG_CUSTOM_KERNEL_MAGNETOMETER is not set
 # CONFIG_MTK_MAGHUB is not set
 # CONFIG_MTK_AKM09915_NEW is not set
 # CONFIG_MTK_AKM09911 is not set
@@ -1718,7 +1724,6 @@ CONFIG_MTK_SYSENV=y
 # CONFIG_MTK_VOW_SUPPORT is not set
 # CONFIG_MTK_WATCHPOINT is not set
 # CONFIG_RT_REGMAP is not set
-CONFIG_RAON_REMOTE_CTRL_SOC=y
 CONFIG_MTK_DM_VERITY_OFF=y
 
 #
@@ -1972,14 +1977,18 @@ CONFIG_GT1151_CONFIG=""
 # CONFIG_GTP_POWER_CTRL_SLEEP is not set
 # CONFIG_TOUCHSCREEN_MTK_GT1151TB is not set
 # CONFIG_TOUCHSCREEN_MTK_GT928 is not set
-# CONFIG_TOUCHSCREEN_MTK_GT9XXTB_HOTKNOT is not set
+# CONFIG_TOUCHSCREEN_MTK_GT9XXTB_HN_NEW is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_PHONE is not set
 # CONFIG_TOUCHSCREEN_MTK_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_SCP is not set
+# CONFIG_TOUCHSCREEN_MTK_FT5X0X is not set
+# CONFIG_TOUCHSCREEN_MTK_FT6336S is not set
+# CONFIG_TOUCHSCREEN_MTK_MSG2238A is not set
+# CONFIG_TOUCHSCREEN_MTK_SYNAPTICS_3320_50 is not set
 # CONFIG_TOUCHSCREEN_UNIFIED_DRIVER_4 is not set
-CONFIG_TOUCHSCREEN_MTK_FOCALTECH_TS=y
-CONFIG_TOUCHSCREEN_MTK_FTS_DIRECTORY="ft6x36"
+# CONFIG_TOUCHSCREEN_MTK_FT5446 is not set
+# CONFIG_TOUCHSCREEN_MTK_FTSNOW is not set
 CONFIG_KEYBOARD_MTK=y
 # CONFIG_KEYBOARD_HID is not set
 CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
@@ -1991,8 +2000,6 @@ CONFIG_KPD_PMIC_LPRST_TD=1
 CONFIG_KPD_PWRKEY_USE_PMIC=y
 # CONFIG_KPD_ACCESS_PMIC_REGMAP is not set
 # CONFIG_MTK_MRDUMP_KEY is not set
-CONFIG_AW9523_SUPPORT=y
-CONFIG_AW9106_SUPPORT=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2288,6 +2295,7 @@ CONFIG_MTK_SMART_BATTERY=y
 # CONFIG_MTK_BQ24157_SUPPORT is not set
 # CONFIG_MTK_BQ24160_SUPPORT is not set
 # CONFIG_MTK_BQ24196_SUPPORT is not set
+CONFIG_MTK_BQ24296_SUPPORT=y
 # CONFIG_MTK_NCP1854_SUPPORT is not set
 # CONFIG_MTK_BQ24297_SUPPORT is not set
 # CONFIG_MTK_BQ25890_SUPPORT is not set
@@ -3254,7 +3262,6 @@ CONFIG_MTK_EIC=y
 # CONFIG_MTK_SEC_DEINT_SUPPORT is not set
 # CONFIG_MTK_EIC_HISTORY_DUMP is not set
 CONFIG_MTK_IRQ_NEW_DESIGN=y
-CONFIG_MTK_IRQ_NEW_DESIGN_DEBUG=y
 # CONFIG_IPACK_BUS is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_FMC is not set
@@ -3350,7 +3357,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
-# CONFIG_SDCARD_FS is not set
+CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
