Add FocalTech touchscreen driver support
Enables FocalTech touchscreen configuration in defconfig
Integrates Kconfig and Makefile entries for driver inclusion
Specifies directory path for FocalTech touch driver components

--- a/arch/arm/configs/wt6580_we_n_defconfig
+++ b/arch/arm/configs/wt6580_we_n_defconfig
@@ -1989,6 +1989,8 @@ CONFIG_GT1151_CONFIG=""
 # CONFIG_TOUCHSCREEN_UNIFIED_DRIVER_4 is not set
 # CONFIG_TOUCHSCREEN_MTK_FT5446 is not set
 # CONFIG_TOUCHSCREEN_MTK_FTSNOW is not set
+CONFIG_TOUCHSCREEN_MTK_FOCALTECH_TS=y
+CONFIG_TOUCHSCREEN_MTK_FTS_DIRECTORY="focaltech_touch"
 CONFIG_KEYBOARD_MTK=y
 # CONFIG_KEYBOARD_HID is not set
 CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
