--- a/drivers/input/touchscreen/mediatek/Kconfig
+++ b/drivers/input/touchscreen/mediatek/Kconfig
@@ -204,4 +204,6 @@ config TOUCHSCREEN_MTK_FTSNOW
         bool "Focaltech TS (SnowCat) for Mediatek package"
         default n
 
+source "drivers/input/touchscreen/mediatek/focaltech_touch/Kconfig"
+		
 endif
