--- a/drivers/input/touchscreen/mediatek/Makefile
+++ b/drivers/input/touchscreen/mediatek/Makefile
@@ -25,3 +25,4 @@ obj-$(CONFIG_TOUCHSCREEN_MTK_MSG2238A)  +=  msg2238a/
 obj-$(CONFIG_TOUCHSCREEN_MTK_FT6336S)   +=  ft6336s/
 obj-$(CONFIG_TOUCHSCREEN_MTK_FT5446)	+=  ft5446/
 obj-$(CONFIG_TOUCHSCREEN_MTK_FTSNOW)	+=  ftsnow/
+obj-$(CONFIG_TOUCHSCREEN_MTK_FOCALTECH_TS) += focaltech_touch/
